# copier-uv-application

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yml  extensions.py  justfile  pyproject.toml
src/project/: .gitignore  .pre-commit-config.yaml.jinja  CONTRIBUTING.md.jinja  README.md.jinja  justfile  justfile.jinja  pyproject.toml.jinja  ruff.toml
src/project/.github/RELEASE_TEMPLATE/: changelog_footer.md.jinja
src/project/.github/workflows/: ci.yml  release.yml  release.yml.jinja
src/project/configs/: dmg-settings.json.jinja  pyinstaller.toml.jinja
src/project/scripts/: pyinstaller.py.jinja  update_version.py.jinja
src/project/src/: app.py.jinja
src/project/src/{{python_package_import_name}}/: __init__.py.jinja
src/project/src/{{python_package_import_name}}/configs/: __init__.py.jinja
src/project/src/{{python_package_import_name}}/ui/: main.py
