[project]
name = "copier-uv-application"
version = "0.0.0"
description = "A Copier template that uses uv"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "chaytus", email = "dev@chaytus.com" },
]
requires-python = "~=3.10"
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
]

[dependency-groups]
dev = [
  "blacken-docs>=1.16",
  "commitizen>=3.20",
  "deptry>=0.14.2",
  "jinja2>=3.1.3",
  "mkdocs-macros-plugin>=1.0.5",
  "mkdocs-material[imaging]>=9.5.14",
  "mkdocstrings>=0.24.1",
  "mkdocstrings-python>=1.9",
  "mypy>=1.9",
  "pip-audit>=2.7.2",
  "pre-commit>=4.1",
  "pyproject-fmt>=1.7",
  "pytest>=8.1.1",
  "pytest-cov>=4.1",
  "ruff>=0.3.4",
  "validate-pyproject>=0.16",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
